# misc

./: .gitignore  Cargo.toml  README.md
c/free/: main.c
c/if-integer-conditions/: main.c
c/load_lib/: main  main.c
c/periodical-lib-call/: Cargo.toml  main.c
c/periodical-lib-call/src/: lib.rs
c/pyobject_dict/: CMakeLists.txt  main.c
docker/numpy-cos/: Dockerfile  README.md
docker/numpy-cos/src/: cos-value.py
docker/simple-alpine/: Dockerfile  README.md
go-performance-measurement/: README.md  bench.go  bench_test.go
go-performance-measurement/bench/: bench.go
go-performance-measurement/profiling/: cgo.go  main.go
go/array-contains/: array_test.go  go.mod
go/cgo-cast-callback/: main.go
go/cgo-open-shared-library/: main.go
go/configcheck-parser/: main.go
go/disk-partitions/: go.mod  go.sum  main.go
go/filepath/: main.go
go/json-to-string-newline/: main.go
go/performance-measurement/: README.md
go/performance-measurement/bench/: bench_test.go
go/time-json-marshall/: main.go
python/memory-usage/: README.md  print_agent_mem.py  read_agent_mem.py  read_mem.py  sample.py  utils.py
python/prime-numbers-calc/: is_prime.py  prime-dist.py
rust/: Cargo.toml
rust/ffi/: Cargo.toml  build_and_run.sh  libffi.dylib  main.c
rust/ffi/src/: lib.rs  main.rs
rust/hello-world-library/: Cargo.toml
rust/hello-world-library/src/: lib.rs
rust/macro-in-other-crate/: Cargo.toml
rust/main-macro-crate/: Cargo.toml
rust/read-json-string/: Cargo.toml
rust/serde-empty/: Cargo.toml
shell/: pass_args.sh  sleep_background.sh
(+9 files in other folders)
